tests/baselines/reference/stringLiteralTypesWithTemplateStrings02.errors.txt
stringLiteralTypesWithTemplateStrings02.ts(1,22): error TS2322: Type '"AB\nC"' is not assignable to type '"AB\r\nC"'.


==== stringLiteralTypesWithTemplateStrings02.ts (1 errors) ====
    let abc: "AB\r\nC" = `AB
                         ~~~
    C`;
    ~~
!!! error TS2322: Type '"AB\nC"' is not assignable to type '"AB\r\nC"'.
    let de_NEWLINE_f: "DE\nF" = `DE${"\n"}F`;